Quiz based on PA3

--- a/pa3/ComputeStatistics.ipynb
+++ b/pa3/ComputeStatistics.ipynb
@@ -1903,6 +1903,170 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quiz based on PA3 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Output of HW_func\n",
+    "- E is the **sum of the vectors**\n",
+    "- NE is the **number of not-nan entries** for each coordinate of the vectors\n",
+    "- Mean is the **Mean vector** (ignoring nans)\n",
+    "- O is the **sum of the outer products**\n",
+    "- NO is the **number of non-nans in the outer product**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Outer Products of matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "P = [np.nan, 12, np.nan, 0, 7, np.nan]\n",
+    "\n",
+    "PS, PN = outerProduct(P)\n",
+    "print(np.sum(PN))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Nan-Sum of Outer Product matrices\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "P = [np.nan, 12, np.nan, 0, 7, np.nan]\n",
+    "Q = [12, np.nan, 0, np.nan, np.nan, 7]\n",
+    "PQ_S, PQ_N = sumWithNan(outerProduct(P),outerProduct(Q))\n",
+    "print(np.sum(PQ_S != 0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Matrix Shapes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "S = np.array([[12,7,0],[7,14,6],[0,6,8]])\n",
+    "N = np.array([[2,2,2],[2,2,2],[2,2,2]])\n",
+    "E, NE, Mean, O, NO = HW_func(S,N)\n",
+    "print(O.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# S,N are same with the question \"Matrix Shapes\"\n",
+    "print(Mean[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Understanding S and N matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# S,N are same with the question \"Matrix Shapes\"\n",
+    "print(np.sum(O == 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
