SparkML model's input data format

--- a/pa5/HW5.ipynb
+++ b/pa5/HW5.ipynb
@@ -527,6 +527,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
@@ -534,6 +541,43 @@
     "from pyspark.ml.feature import VectorAssembler\n",
     "from pyspark.sql.functions import col"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Spark 2.3\n",
+    "将dataFrame转为RDD，再用KMeans训练  \n",
+    "**方式一**  \n",
+    "```python\n",
+    "cols = df.columns\n",
+    "\n",
+    "expr = [col(c).cast(\"Double\").alias(c) \n",
+    "        for c in df.columns]\n",
+    "\n",
+    "df2 = df.select(*expr)\n",
+    "vectorAss = VectorAssembler(inputCols=cols, outputCol=\"features\")\n",
+    "vdf = vectorAss.transform(df2)\n",
+    "\n",
+    "data = vdf.rdd.map(lambda row: [x for x in row['features']])\n",
+    "```\n",
+    "\n",
+    "**方式二**  \n",
+    "```python\n",
+    "data = df.rdd.map(lambda line: [float(x) for x in line])\n",
+    "```\n",
+    "\n",
+    "## Spark 2.4\n",
+    "KMeans.fit 接受dataframe作为输入，只要frame中含有fearures字段，所以按照上诉方式一中的得到vdf后，就可以用来训练  \n",
+    "<img src=\"./Spark2.4.0-Estimator-input.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -555,7 +599,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = df.rdd.map(lambda line: [float(x) for x in line])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
